Text no longer spills out of cards

--- a/src/app/history/history.component.css
+++ b/src/app/history/history.component.css
@@ -4,9 +4,7 @@
     padding: 0;
     width: 18em;
 }
-.flex-container{
-  /* background-color: #669bbc !important; */
-}
+
 .queryList li {
     cursor: pointer;
     position: relative;
@@ -36,11 +34,13 @@
   }
 
   .data-card {
+    display:flex;
     margin: 5px;
     max-width: 400px;
     height: 300px;
     padding: 20px;
     background-color: #3db2e6;
+    bottom: 15px;
   }
 
   .content {
@@ -104,4 +104,8 @@
   position: absolute;
   left: 51%;
   top: 50vh;
+}
+
+.data-card-content {
+  overflow-y: scroll;
 }
